--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.1360.0",
     "bull": "^4.10.4",
     "dotenv": "^16.0.3",
-    "fastify": "^4.17.0"
+    "fastify": "^4.17.0",
+    "nodemailer": "^6.9.4"
   }
 }
