feat: created new .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-AWS_ACCESS_KEY=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-AWS_API_VERSION=
+SMTP_HOST= 
+SMTP_PORT= 
+SMTP_SECURE= 
+SMTP_USER=
+SMTP_PASS=
 REDIS_HOST=
 REDIS_PORT=
 EMAIL_FROM=
